<resources>
    <string name="app_name">Akmall</string>

    <!--사용자설정-->
    <string name="setting_title">사용자 설정</string>
    <string name="setting_title2">설정</string>
    <string name="setting_login">로그인</string>
    <string name="setting_login2">로그인 정보</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_login_auto">자동로그인</string>
    <string name="setting_login_auto_detail">앱에서 항상 로그인 상태를 유지합니다.</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="setting_alarm_receive">쇼핑 정보 알림</string>
    <string name="setting_alarm_receive_detail">맞춤상품/이벤트/기획전/쿠폰발급 정보 등\n마케팅(광고성) 앱 알림을 받아보실 수 있습니다.</string>
    <string name="setting_alarm_receive2">구매 정보 알림</string>
    <string name="setting_alarm_receive_detail2">구매하신 상품의 배송정보, 문의에 대한 답변 등을\n실시간으로 받아보실 수 있습니다.</string>
    <string name="setting_alarm_time">알림금지 시간설정</string>
    <string name="setting_alarm_time_detail">설정하신 시간대에는 알림이 발송되지 않습니다.\n알림 금지 시간을 별도로 설정하지 않아도\n21:00~08:00까지는 알림을 발송하지 않습니다.</string>
    <string name="setting_alarm_nosound">무음 알림 받기</string>
    <string name="setting_alarm_nosound_detail">알림 메시지를 소리 없이 받으실 수 있습니다.</string>
    <string name="setting_banner">동영상 재생</string>
    <string name="setting_banner_auto">동영상 배너 자동 플레이</string>
    <string name="setting_version">앱 버전 정보</string>
    <string name="setting_center">고객센터</string>
    <string name="setting_call">전화하기</string>
    <string name="setting_consult">문의하기</string>
    <string name="setting_number">1588-2055</string>
    <string name="setting_ptop">1:1 상담문의</string>

    <!-- 음성검색 -->
    <string name="voice_title">음성검색</string>
    <string name="voice_content">검색어를 말해주세요</string>

    <!-- 래ㅐㅅㄷㄱ -->
    <string name="footer_line1">에이케이 에스앤디(주)AK인터넷 쇼핑몰ㅣ대표이사 정일채</string>
    <string name="footer_line2">경기도 성남시 분당구 황새울로 326 서현빌딩 3층ㅣ고객센터 1588-2055</string>
    <string name="footer_line3">사업자등록번호 129-85-42351ㅣ통신판매법신고 경기성남 2007-350</string>
    <string name="footer_line4">개인정보관리 및 청소년 보호책임자 백만석ㅣFriendly@akmall.com</string>
    <string name="footer_line5">이용약관</string>
    <string name="footer_line6">개인정보처리(취급)방침</string>
    <string name="footer_line7">사업자정보확인</string>
    <string name="footer_line8">CopyrightⓒS&amp;D INC.</string>

    <string name="devicereg"><![CDATA[act=DeviceRegist&phonetype=2&token=%1$s&appid=%2$s&deny_all=%3$s&oldtoken=%4$s&version=%5$s]]></string>
    <string name="fail_regist_alarm">알림 등록에 실패하였습니다.</string>

    <string name="versioncheck_update">업데이트</string>
    <string name="versioncheck_finish"><u>앱종료</u></string>
    <string name="versioncheck_next"><u>다음에</u></string>

</resources>
