<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e5e5e5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/FOOTER_TOP_ONE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#6c6c6c"
            android:gravity="center">

            <TextView
                android:id="@+id/btn_footer_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="로그인"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@drawable/border_footer"></View>

        <LinearLayout
            android:id="@+id/FOOTER_TOP_TWO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#6c6c6c"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PC버전보기"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@drawable/border_footer"></View>

        <LinearLayout
            android:id="@+id/FOOTER_TOP_THREE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#6c6c6c"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="고객센터"
                android:textColor="#fff"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_plaza_down"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/border_footer_btn"
        android:text="AK PLAZA 앱 다운하기"
        android:textSize="12dp"
        android:textColor="#fff"
        android:visibility="gone"/>

    <TextView
        android:layout_marginTop="18dp"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:text="@string/footer_line1"
        android:textSize="10dp"
        android:textColor="#999"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:text="@string/footer_line2"
        android:textSize="10dp"
        android:textColor="#999"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:text="@string/footer_line3"
        android:textSize="10dp"
        android:textColor="#999"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:text="@string/footer_line4"
        android:textSize="10dp"
        android:textColor="#999"/>
    
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:gravity="center">

        <TextView
            android:id="@+id/FOOTER_BOT_ONE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="#666"
            android:text="@string/footer_line5"/>

        <View
            android:id="@+id/toLeft01"
            android:layout_width="1dp"
            android:background="#ccc"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="match_parent"></View>

        <TextView
            android:id="@+id/FOOTER_BOT_TWO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="#666"
            android:textStyle="bold"
            android:text="@string/footer_line6"/>

        <View
            android:id="@+id/toRight01"
            android:layout_width="1dp"
            android:background="#ccc"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="match_parent"></View>

        <TextView
            android:id="@+id/FOOTER_BOT_THREE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="#666"
            android:gravity="center"
            android:text="@string/footer_line7"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="13dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#999"
        android:textSize="10dp"
        android:text="@string/footer_line8"/>

</LinearLayout>